--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "2",
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.3.6",
     "@scbd/ckeditor5-build-inline-full": "^35.0.0",
+    "change-case": "^4.1.2",
     "node-sass": "8",
     "nuxt": "^2.11.0",
     "sass-loader": "10"
