--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@scbd/ckeditor5-build-inline-full": "^35.0.0",
     "change-case": "^4.1.2",
     "node-sass": "8",
-    "nuxt": "^2.11.0",
+    "nuxt": "2.16.3",
     "sass-loader": "10"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "babel-jest": "^24.1.0",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "jest": "^24.1.0",
+    "jest": "^26.1.0",
     "vue-jest": "^4.0.0-0"
   }
 }
