--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/vue-fontawesome": "2",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.3.1",
     "@scbd/ckeditor5-build-inline-full": "^35.0.0",
     "change-case": "^4.1.2",
     "node-sass": "8",
