--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "10"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "2.1.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
