--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
-    "clean-reinstall": "rm -rf node_modules && npm install"
+    "clean-reinstall": "rm -rf node_modules && yarn install"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "35.2.1",
