remove squash option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,10 @@ _defaults: &defaults
 _run:
   buildDocker: &buildDocker
     name: Build docker image
-    command: |
-      # Restart Docker with experimental features to enable `docker build --squash` option
-      sudo bash -c 'echo "{\"experimental\": true}" > /etc/docker/daemon.json'
-      sudo systemctl restart docker
+    command: |      
       docker info
       docker login -u $DOCKER_USER -p $DOCKER_PASS
-      docker build --squash -t output --build-arg VERSION=$CIRCLE_SHA1 --build-arg BRANCH=${CIRCLE_BRANCH:-master} --build-arg TAG=$CIRCLE_TAG .
+      docker build -t output --build-arg VERSION=$CIRCLE_SHA1 --build-arg BRANCH=${CIRCLE_BRANCH:-master} --build-arg TAG=$CIRCLE_TAG .
   testImage: &testImage
     name: Test docker image 
     command:  |
