--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "node-sass": "8",
     "nuxt": "2.16.3",
     "pinia": "^2.1.4",
-    "sass-loader": "10"
+    "sass-loader": "10",
+    "vue-multiselect": "^2.1.7"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "2.1.0",
