--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "online-reporting-tool",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@nuxt/devtools": "latest",
-    "@nuxtjs/i18n": "^8.0.0-beta.12",
+    "@nuxtjs/i18n-edge": "^8.0.0-beta.12-28139269.7c20648",
     "@types/node": "^18",
     "nuxt": "^3.5.2",
     "sass": "^1.63.6"
@@ -26,7 +26,6 @@
     "@coreui/icons-vue": "^2.0.0",
     "@coreui/utils": "^2.0.2",
     "@coreui/vue": "^4.8.1",
-    "@nuxtjs/i18n-edge": "^8.0.0-beta.12-28122654.89ddb67",
     "@pinia/nuxt": "^0.4.11",
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
