--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pinia/nuxt": "^0.4.11",
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
+    "form-wizard-vue3": "^1.1.0",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
