--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
-    "vue-multiselect": "^3.0.0-beta.2"
+    "vue-multiselect": "^3.0.0-beta.2",
+    "vue-toast-notification": "^3.1.1"
   }
 }
