--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/i18n-edge": "^8.0.0-beta.12-28139269.7c20648",
     "@types/node": "^18",
-    "nuxt": "^3.5.2",
+    "nuxt": "^3.6.2",
     "sass": "^1.63.6"
   },
   "dependencies": {
@@ -29,9 +29,12 @@
     "@pinia/nuxt": "^0.4.11",
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
+    "form-wizard-vue3": "^1.1.0",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pinia": "^2.1.4",
-    "vue-multiselect": "^3.0.0-beta.2"
+    "vue-multiselect": "^3.0.0-beta.2",
+    "vue-toast-notification": "^3.1.1"
   }
 }
