--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/i18n-edge": "^8.0.0-beta.12-28139269.7c20648",
     "@types/node": "^18",
+    "fs-extra": "^11.1.1",
     "nuxt": "^3.6.2",
-    "sass": "^1.63.6",
-    "fs-extra": "^11.1.1"
+    "sass": "^1.63.6"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^38.1.0",
@@ -27,6 +27,9 @@
     "@coreui/icons-vue": "^2.0.0",
     "@coreui/utils": "^2.0.2",
     "@coreui/vue": "^4.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@pinia/nuxt": "^0.4.11",
     "@vueuse/core": "^10.2.1",
     "bootstrap": "^5.3.0",
