--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@nuxt/devtools": "latest",
     "@nuxtjs/i18n-edge": "^8.0.0-beta.12-28139269.7c20648",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/node": "^18",
     "fs-extra": "^11.1.1",
     "nuxt": "^3.6.2",
