--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "vue-multiselect": "^3.0.0-beta.2",
-    "vue-toast-notification": "^3.1.1"
+    "vue-toast-notification": "^3.1.1",
+    "vue3-loading-overlay": "^0.0.0"
   }
 }
