--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "@vueuse/core": "^10.2.1",
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
-    "form-wizard-vue3": "^1.1.0",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "vue-multiselect": "^3.0.0-beta.2",
-    "vue-toast-notification": "^3.1.1"
+    "vue-toast-notification": "^3.1.1",
+    "vue3-loading-overlay": "^0.0.0"
   }
 }
