--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "socket.io-client": "^4.7.2",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "^3.1.1",
-    "vue3-loading-overlay": "^0.0.0"
+    "vue3-loading-overlay": "^0.0.0",
+    "webui-popover": "^1.2.18"
   }
 }
