--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
+    "read-excel-file": "^5.6.1",
     "socket.io-client": "^4.7.2",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "^3.1.1",
-    "vue3-loading-overlay": "^0.0.0"
+    "vue3-loading-overlay": "^0.0.0",
+    "webui-popover": "^1.2.18"
   }
 }
