--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^5.3.0",
     "change-case": "^5.4.4",
     "fs-finder": "^1.8.1",
+    "change-case": "^5.4.4",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
