--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "change-case": "^4.1.2",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
+    "masonry-layout": "^4.2.2",
     "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
