--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@nuxt/devtools": "latest",
-    "@nuxtjs/i18n-edge": "^8.0.0-beta.12-28139269.7c20648",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/node": "^18",
     "fs-extra": "^11.1.1",
@@ -32,6 +31,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@nuxtjs/i18n": "^8.3.1",
     "@pinia/nuxt": "^0.4.11",
     "@vueuse/core": "^10.2.1",
     "bootstrap": "^5.3.0",
@@ -53,5 +53,6 @@
   },
   "resolutions": {
     "string-width": "4.2.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
