--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "clean-reinstall": "rm -rf node_modules && yarn install",
-    "rename-file-name": "node ./rename-file"
+    "rename-file-name": "node ./rename-file",
+    "import-translation": "node script/copy-translation-files.js"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
@@ -36,6 +37,7 @@
     "@vueuse/core": "^10.2.1",
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
+    "fs-finder": "^1.8.1",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
