--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "import-translation": "node script/copy-translation-files.js"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@intlify/unplugin-vue-i18n": "^5.2.0",
     "@nuxt/devtools": "^1.2.0",
-    "@nuxtjs/i18n-edge": "^8.3.1-28565891.16f9309",
+    "@nuxtjs/i18n-edge": "^8.5.5-28789073.3bcdae6",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
-    "@types/node": "^20.12.8",
+    "@types/node": "^22.7.9",
     "fs-extra": "^11.1.1",
     "nuxt": "^3.11.2",
-    "nuxt-gtag": "^2.0.5",
+    "nuxt-gtag": "^3.0.1",
     "sass": "^1.63.6"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@ckeditor/ckeditor5-vue": "^7.2.0",
     "@coreui/coreui": "^5.0.0",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-vue": "^2.0.0",
@@ -34,7 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@pinia/nuxt": "^0.5.1",
-    "@vueuse/core": "^10.2.1",
+    "@vueuse/core": "^11.1.0",
     "bootstrap": "^5.3.0",
     "change-case": "^5.4.4",
     "fs-finder": "^1.8.1",
@@ -47,6 +47,7 @@
     "print-this": "^2.0.0",
     "read-excel-file": "^5.6.1",
     "socket.io-client": "^4.7.2",
+    "string-width": "7.2.0",
     "v-onboarding": "^2.8.1",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "^3.1.1",
@@ -54,6 +55,6 @@
     "webui-popover": "^1.2.18"
   },
   "resolutions": {
-    "string-width": "4.2.3"
+    
   }
 }
