--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "bootstrap": "^5.3.0",
     "change-case": "^5.4.4",
     "fs-finder": "^1.8.1",
-    "change-case": "^5.4.4",
-    "fs-finder": "^1.8.1",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
@@ -56,7 +54,8 @@
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "^3.1.1",
     "vue3-loading-overlay": "^0.0.0",
-    "webui-popover": "^1.2.18"
+    "webui-popover": "^1.2.18",
+    "write-excel-file": "^2.3.2"
   },
   "resolutions": {}
 }
