--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/i18n-edge": "^8.5.5-28789073.3bcdae6",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/bootstrap": "^5.2.10",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.7.9",
     "fs-extra": "^11.1.1",
     "nuxt": "^3.11.2",
