--- a/package.json
+++ b/package.json
@@ -59,5 +59,6 @@
     "webui-popover": "^1.2.18",
     "write-excel-file": "^2.3.2"
   },
-  "resolutions": {}
+  "resolutions": {},
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
