--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "node_modules/**/*"
   ],
   "compilerOptions": {
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "module": "esnext"
   }
 }
