Adds development environment scripts
Adds scripts for running the development server with different .env files.

This allows developers to easily switch between development and production
configurations for testing purposes.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "dev-dev": "npx nuxt dev --dotenv .env.development",
+    "dev-prod": "npx nuxt dev --dotenv .env.production",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
